# data_engineering_roadmap

./: .gitignore  Dockerfile.pyspark  README.md  main.py  pyproject.toml
data_structures/linked_lists/: implement_linked_list.py
data_structures_and_algorithms/book/: __init__.py
data_structures_and_algorithms/stairway_to_heaven/: PLAN.md
leet_code/problems/: _12_integer_to_roman.py  _130_surrounded_regions_attempt1.py  _1672_Richest_customer_wealth.py  _202_happy_numbers.py  _20_valid_parentheses_hierarchy_in_nested_only.py  _222_count_complete_tree_nodes.py  _226_invert_bt.py  _24_swap_nodes_in_pairs.py  _344_reverse_strings.py  _392_is_sub_sequence.py  _509_fibonacci_number.py  _637_avg_levels_in_bt.py  (+8 more)
pyspark/: 13_h_top_players.py  13_h_top_players_regex.py  14_e_daily_total_sales.py  15_m_top_5_by_day.py  16_h_products_w_increasing_sales.py  17_m_remove_outliers_from_trip.py  1_e_load_and_transform_data.py  2_e_handling_null_values.py  3_e_total_purchase_py_customer.py  4_m_running_payroll.py  5_m_food_beverage_and_sales.py  7_m_load_and-transform_json_files.py
pyspark_playground/: 13_h_top_players.py  13_h_top_players_regex.py  14_e_daily_total_sales.py  15_m_top_5_by_day.py  16_h_products_w_increasing_sales.py  17_m_remove_outliers_from_trip.py  1_e_load_and_transform_data.py  2_e_handling_null_values.py  3_e_total_purchase_py_customer.py  4_m_running_payroll.py  5_m_food_beverage_and_sales.py  7_m_load_and-transform_json_files.py  README.md  _13_h_top_players.py  _13_h_top_players_regex.py  _14_e_daily_total_sales.py  _15_m_top_5_by_day.py  _16_h_products_w_increasing_sales.py  _17_m_remove_outliers_from_trip.py  _18_e_driver_details_for_riders.py  _19_customer_loyalty_score.py  _1_e_load_and_transform_data.py  _20_track_employment_history.py  _2_e_handling_null_values.py  _3_e_total_purchase_py_customer.py  _4_m_running_payroll.py  _5_m_food_beverage_and_sales.py  _7_m_load_and_transform_json_files.py  __init__.py  _custom_1_count_by_product.py  utils.py
sql_lab/pgsql_lab/: .gitignore  Dockerfile.pgsql  Makefile  README.md  TROUBLESHOOTING.md  databricks.yml  docker-compose.yml  pyproject.toml
sql_lab/pgsql_lab/ddl/: db_schema.sql
sql_lab/pgsql_lab/src/pgsql_lab/: cli.py
tests/: conftest.py  params_book.py  params_leet_code.py  params_pyspark_playground.py  params_stairway.py  test_book.py  test_leet_code.py  test_pyspark_playground.py  test_stairway_to_heaven.py
utils/: logger.py
(+163 files in other folders)
