[project]
name = "data-engineering-roadmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=6.1.0",
    "pyspark==3.5.5",
    "pandas>=3.0.3",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyspark_playground", "data_structures_and_algorithms"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--benchmark-disable" 
#--cov=data_structures_and_algorithms --cov-report=term-missing 

[dependency-groups]
dev = [
    "commitizen>=4.15.1",
]
