[project]
name = "pgsql-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "GioDecio", email = "giovanni.decillis@gmail.com" }
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "psycopg2-binary>=2.9.12",
]

[project.scripts]
pgsql-lab = "pgsql_lab.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pgsql_lab"]

[tool.uv]
python-preference = "only-managed"
